# Ulauncher-Revived

./: .gitignore  AUTHORS  LICENSE  MANIFEST.in  PKGBUILD.template  README.md  setup.cfg  setup.py  ul  ulauncher.desktop  ulauncher.desktop.in
.github/ISSUE_TEMPLATE/: 2_Bug_report.yml  bug_report.md
contrib/systemd/: ulauncher.service
data/ui/: PreferencesUlauncherDialog.ui  UlauncherWindow.ui
debian/: control
docs/extensions/: migration.rst
scripts/: build-deb.sh  build-preferences.sh  build-rpm.sh  build-targz.sh  common.sh  help.sh  make-release.sh  run-ci.sh
ulauncher/: VERSION  __init__.py  config.py
ulauncher/api/server/: ExtensionDb.py  ExtensionRunner.py  GithubExtension.py
ulauncher/search/: SortedList.py
ulauncher/search/apps/: AppDb.py
ulauncher/ui/: AppIndicator.py
ulauncher/ui/windows/: PreferencesUlauncherDialog.py  UlauncherWindow.py
ulauncher/utils/: image_loader.py  semver.py
ulauncher/utils/desktop/: reader.py
